--- a/crossplane/provider-config-gcp.yaml
+++ b/crossplane/provider-config-gcp.yaml
@@ -6,7 +6,7 @@ metadata:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
     argocd.argoproj.io/hook: PostSync
 spec:
-  projectID: dot-20230724222511
+  projectID: web-project-init
   credentials:
     source: Secret
     secretRef:
